Replace newInstance() by getConstructor().newInstance()